--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -54,17 +54,12 @@
             <!-- <HINT> Use Bootstrap Collapse to hide exam first, more details could be found here
             https://www.w3schools.com/bootstrap4/bootstrap_collapse.asp-->
 
-            <!--
-
-            A collapse example here:
             <div id="exam" class="collapse">
-                Click to expand elements within the collapse div
+                Show exam
                 </div>
 
-            -->
-
             <!-- <HINT> If user is authenticated, show course exam with a list of question -->
-
+            {% if user.is_authenticated %}
             <!-- <HINT> Each example will have many questions -->
 
             <!-- <HINT> Each question will have many choices -->
@@ -97,6 +92,7 @@
 
             <!--Check here to see more details Bootstrap checkbox
              https://www.w3schools.com/bootstrap4/bootstrap_forms_inputs.asp-->
+            {% endif %}
     </div>
 </body>
 </html>
