--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -38,18 +38,31 @@
 <div class="container-fluid">
     {% if grade > 80 %}
     <div class="alert alert-success">
-       <!--HINT Display passed info -->
+       <h5>Congratulations, {{ user.first_name }} ! You have passed the exam and completed the course with score 100/100</h5>
     </div>
-        {% else %}
-        <div class="alert alert-danger">
-            <!--HINT Display failed info -->
+    {% else %}
+    <div class="alert alert-danger">
+        <h5>Failed, sorry {{ user.first_name }} ! You have failed exam with score 100/100</h5>
+    </div>
+    <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
+    {% endif %}
+    <div class="card-columns-vertical mt-1">
+    <h5 class="">Exam results</h5>
+    {% for question in course.question_set.all %}
+    <div class="card mt-1">
+        <div class="card-header"><h5>{{ question.content}}</h5></div>
+        {% csrf_token %}
+        <div class="card-body">
+            {% for choice in question.choice_set.all %}
+            {% if choice.is_correct and choice.id in selected_ids %}<p class="text-success">Correct answer: {{ choice.content }}</p>{% endif %}
+            {% if not choice.is_correct and choice.id in selected_ids %}<p class="text-danger">Wrong answer: {{ choice.content }}</p>{% endif %}
+            {% if choice.is_correct and not choice.id in selected_ids %}<p class="text-warning">Not selected: {{ choice.content }}</p>{% endif %}
+            {% if not choice.is_correct and not choice.id in selected_ids %}<p>{{ choice.content }}</p>{% endif %}
+            {% endfor %}
         </div>
-        <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
-        {% endif %}
-        <div class="card-columns-vertical mt-1">
-        <h5 class="">Exam results</h5>
-            <!--HINT Display exam results-->
-        </div>
+    </div>
+    {% endfor %}
+    </div>
     </div>
 </body>
 </html>
