--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -38,11 +38,11 @@
 <div class="container-fluid">
     {% if grade > 80 %}
     <div class="alert alert-success">
-       <h5>Congratulations, {{ user.first_name }} ! You have passed the exam and completed the course with score 100/100</h5>
+       <h5><b>Congratulations, {{ user.first_name }} !</b> You have passed the exam and completed the course with score {{ grade }}/100</h5>
     </div>
     {% else %}
     <div class="alert alert-danger">
-        <h5>Failed, sorry {{ user.first_name }} ! You have failed exam with score 100/100</h5>
+        <h5><b>Failed, sorry {{ user.first_name }} !</b> You have failed exam with score {{ grade }}/100</h5>
     </div>
     <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
     {% endif %}
